--- a/src/CSimple/CSimple.csproj
+++ b/src/CSimple/CSimple.csproj
@@ -33,6 +33,14 @@
   <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
   <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
   <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
+  <GenerateAppInstallerFile>True</GenerateAppInstallerFile>
+  <AppxPackageSigningEnabled>False</AppxPackageSigningEnabled>
+  <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
+  <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+  <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
+  <GenerateTestArtifacts>True</GenerateTestArtifacts>
+  <AppInstallerUri>C:/</AppInstallerUri>
+  <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
 
   </PropertyGroup>
 
