Implementing mouse movements

--- a/src/CSimple/CSimple.csproj
+++ b/src/CSimple/CSimple.csproj
@@ -95,6 +95,7 @@
 		<PackageReference Include="SharpDX" Version="4.2.0" />
 		<PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />
 		<PackageReference Include="SharpDX.DXGI" Version="4.2.0" />
+		<PackageReference Include="WindowsInput" Version="6.4.1" />
 	</ItemGroup>
 
    <ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadGenericExceptionInfoBarCSimpleHideInfoBar="True" /></VisualStudio></ProjectExtensions>
