--- a/src/CSimple/CSimple.csproj
+++ b/src/CSimple/CSimple.csproj
@@ -93,6 +93,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="NAudio" Version="2.2.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="NWaves" Version="0.9.6" />
 		<PackageReference Include="OpenCvSharp4" Version="4.10.0.20240616" />
 		<PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20240616" />
 		<PackageReference Include="SharpDX" Version="4.2.0" />
