Rename app from Simple to CSimple across project
Updated all references from 'Simple' to 'CSimple' in documentation, scripts, project files, and installer messages. Adjusted application title, IDs, and descriptions in CSimple.csproj and manifest templates. Modified certificate files and updated version/build info. Cleaned up unused code in App.xaml.cs and improved version cleanup logic in publish-and-upload.ps1.

--- a/src/CSimple/CSimple.csproj
+++ b/src/CSimple/CSimple.csproj
@@ -14,14 +14,14 @@
         <SingleProject>true</SingleProject>
         <UseMaui>true</UseMaui>
         <RootNamespace>CSimple</RootNamespace>
-        <ApplicationTitle>Simple</ApplicationTitle>
-        <ApplicationId>com.simpleinc.simple</ApplicationId>
+        <ApplicationTitle>CSimple</ApplicationTitle>
+        <ApplicationId>com.simpleinc.csimple</ApplicationId>
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
         <ApplicationVersion>1</ApplicationVersion>
         <!-- Microsoft Store Configuration -->
         <ApplicationPublisher>Simple Inc</ApplicationPublisher>
-        <ApplicationDescription>Simple - Streamlined productivity and automation tools</ApplicationDescription>
-        <PackageDescription>Simple is a comprehensive productivity application designed to streamline your workflow and enhance automation capabilities.</PackageDescription>
+        <ApplicationDescription>CSimple - Streamlined productivity and automation tools</ApplicationDescription>
+        <PackageDescription>CSimple is a comprehensive productivity application designed to streamline your workflow and enhance automation capabilities.</PackageDescription>
         <!-- Logo and Branding Configuration -->
         <UseWinUI>true</UseWinUI>
         <WindowsPackageType>MSIX</WindowsPackageType>
