--- a/src/CSimple.Tests/CSimple.Tests.csproj
+++ b/src/CSimple.Tests/CSimple.Tests.csproj
@@ -16,14 +16,29 @@
                           Version="3.5.0" />
         <PackageReference Include="coverlet.collector"
                           Version="6.0.2" />
+        <PackageReference Include="coverlet.msbuild"
+                          Version="6.0.2" />
         <PackageReference Include="Microsoft.Build"
                           Version="17.10.4" />
         <PackageReference Include="Microsoft.Build.Framework"
                           Version="17.10.4" />
         <PackageReference Include="Microsoft.Build.Utilities.Core"
                           Version="17.10.4" />
+        <PackageReference Include="ReportGenerator"
+                          Version="5.3.8" />
+        <PackageReference Include="Microsoft.TestPlatform.TestHost"
+                          Version="17.10.0" />
     </ItemGroup>
     <ItemGroup>
         <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
     </ItemGroup>
+    <ItemGroup>
+        <None Include="test.runsettings" />
+        <None Include="TestUtilities\**\*" />
+        <Content Include="TestData\**\*" />
+    </ItemGroup>
+    <PropertyGroup>
+        <CodeCoverageEnabled>true</CodeCoverageEnabled>
+        <VSTestUseMSBuildOutput>false</VSTestUseMSBuildOutput>
+    </PropertyGroup>
 </Project>
