Add NetPage loading integration and demo tests
Introduces comprehensive integration tests for NetPage loading, including model detection, directory size checks, and resource/converter validation. Adds NetPageLoadingTests and NetPageLoadingDemoTest to verify model presence and simulate expected console output. Enhances build test robustness with retry logic and improved error analysis for MAUI-specific issues in DotNetBuildIntegrationTests and SimpleBuildTests. Project files updated to support new tests.

--- a/src/CSimple.Tests/CSimple.Tests.csproj
+++ b/src/CSimple.Tests/CSimple.Tests.csproj
@@ -29,6 +29,7 @@
         <PackageReference Include="Microsoft.TestPlatform.TestHost"
                           Version="17.10.0" />
     </ItemGroup>
+    <!-- <ProjectReference Include="..\CSimple\CSimple.csproj" /> -->
     <ItemGroup>
         <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
     </ItemGroup>
