--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,19 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.userprefs
+*_ReSharper.Caches/
+*.ReSharper.user
+_ReSharper*/
+*.[Rr]e[Ss]harper
+*.DotSettings.user
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # Build Results
 bin/
@@ -18,6 +31,22 @@ published/
 project.lock.json
 project.fragment.lock.json
 artifacts/
+*.nuget.props
+*.nuget.targets
+project.assets.json
+
+# Test Results and Coverage
+TestResults/
+*.trx
+*.coverage
+*.coveragexml
+*.codecov
+*TestResults.xml
+tests/
+test-results/
+coverage/
+lcov.info
+*.lcov
 
 # Maui specific
 *.app
@@ -67,6 +96,9 @@ Thumbs.db
 *.sbr
 *.tr
 *.tlog
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
 
 # Xamarin
 *.mdb
@@ -104,6 +136,13 @@ yarn-error.log*
 secrets.json
 appsettings.json
 appsettings.Development.json
+appsettings.*.json
+!appsettings.json.template
+*.key
+*.pfx
+*.p12
+*.cer
+*.crt
 
 # OS generated files
 .DS_Store
@@ -139,3 +178,13 @@ coverage.xml
 .huggingface/
 .transformers_cache/
 huggingface_cache/
+models/
+*.onnx
+*.tflite
+*.pb
+
+# Logs and temporary files
+logs/
+*.log
+*.log.*
+log-*.txt
